--- a/src/components/Layouts/Header/Header.css
+++ b/src/components/Layouts/Header/Header.css
@@ -1,6 +1,6 @@
 .header-page {
   width: 20%;
-  height: 70rem;
+  height: auto;
   background-color: #39a900;
   display: flex;
   flex-direction: column;
