--- a/src/components/UI/Proyectos/Proyectos.css
+++ b/src/components/UI/Proyectos/Proyectos.css
@@ -16,14 +16,13 @@ li:hover {
     border-bottom: #fff solid 2px;
     font-weight: 900;
 }
+
 .infor {
-    border: 2px solid #080808;
-    color: aqua;
-    display: flex;
-    width: 5rem;
-    height: 2rem;
+    border: 2px solid #cd1313;
+    width: 10rem;
 }
-.info>div{
+
+.info>div {
     width: 100%;
     height: 100%;
     display: flex;
