--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  /* background-color: #222; */
+   /* background-color: #222;  */
 }
 
-#root {
+.root {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
+  /* background-color: brown; */
 
 }
