--- a/src/components/Layouts/Main/Main.css
+++ b/src/components/Layouts/Main/Main.css
@@ -1,6 +1,6 @@
 .main-page {
   width: 60%;
-  height: 74rem;
+  height: auto;
   background-color: #f9f9f9;
   display: flex;
   border: solid 2px #101010;
@@ -18,7 +18,7 @@
 }
 
 .div-Card {
-  border: solid 1px blue;
+  /* border: solid 1px blue; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -33,13 +33,12 @@
   margin-right: 9rem;
   text-align: center;
   width: 100%;
- 
- gap: 4rem;
+  gap: 4rem;
 
 }
 
-.Referencias{
-  
+.Referencias {
+
   width: 100%;
   border: none;
   display: flex;
@@ -49,8 +48,35 @@
 
 
 }
-.Ref{
-  border: solid 1px  red;
+
+.Ref {
+
   width: 100%;
+  height: 50%;
   color: black;
+
+}
+
+.Perfils {
+  font-size: 2.5rem;
+  color: #090909;
+  list-style: none;
+  text-decoration: none;
+  border: #080808;
+}
+
+.Exp {
+  display: flex;
+  
+
+}
+
+.TiposExperiencias {
+  display: flex;
+    justify-content: space-evenly;
+    width: 101%;
+    height: auto;
+    align-items: baseline;
+    align-content: stretch;
+    flex-direction: row-reverse;
 }
