--- a/src/components/UI/Subtitle_Main/Subtitle_Main.css
+++ b/src/components/UI/Subtitle_Main/Subtitle_Main.css
@@ -3,8 +3,8 @@
   .Perfil {
     margin-right: 2rem;
     margin-bottom: -1rem;
-    text-decoration-line: underline;
-    color: rgb(13, 14, 14);
+    
+    color: #0d0e0e;
   }
   
   
