se modifican logos en referencias y se da color

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -23,6 +23,7 @@ p{
     font-size: large;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     flex-direction: row-reverse;
+    margin-left: 10px;
     
 }
 
