--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -12,11 +12,13 @@ Section{
     
 }
 img{
-    width: 20rem;
-    height: 20rem;
+    width: 50px;
+    height: 50px;
     border: 2px solid #020202;
+    border-radius: 50px;
     margin: 10px;
 }
+
 p{
     display: flex;
     justify-content: flex-end;
